# mcp-getweb

./: .gitignore  .ignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-matrix.yml  release-npm.yml
npm/mcp-getweb/: pack_npm.sh  package.json
src/: main.rs
src/mcp/: mod.rs  server.rs  transport.rs  types.rs
src/tools/: duckduckgo_search_tool.rs  felo_tool.rs  fetch_url_tool.rs  google_search_tool.rs  jina_reader_tool.rs  metadata_tool.rs  mod.rs  url_fetch_tool.rs
src/utils/: content_guard.rs  duckduckgo_search.rs  google_search.rs  jina_reader.rs  mod.rs  pdf.rs  readability_extract.rs  search_felo.rs
