[package]
name = "mcp-getweb"
version = "1.5.0"
edition = "2021"
description = "A Model Context Protocol server for web search using DuckDuckGo, Google Search, and Felo AI"
license = "MIT"
authors = ["Ivan Mezentsev"]
repository = "https://github.com/ivan-mezentsev/mcp-getweb"
homepage = "https://github.com/ivan-mezentsev/mcp-getweb"
readme = "README.md"
keywords = ["mcp", "search", "web", "duckduckgo", "google"]
categories = ["web-programming", "api-bindings", "command-line-utilities"]
rust-version = "1.70"

[[bin]]
name = "mcp-getweb"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-vendored", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.24.0"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
async-stream = "0.3"
regex = "1.0"
once_cell = "1.0"
rand = "0.8"
urlencoding = "2.1"
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "2.0.17"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
pdf-extract = "0.10.0"
html2text = "0.15.5"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
